# kshana

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSING.md  NOTICE  README.crates.md  README.md  README.npm.md  README.pypi.md  ROADMAP.md  SECURITY.md  codemeta.json  deny.toml  glama.json  kshana.pyi  pyproject.toml  rust-toolchain.toml  sonar-project.properties
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
commands/: kshana-run.md
data/: optical_site_climatology.csv
docs/: AGENCY-ORBIT-VALIDATION.md  ARAIM_REFERENCE.md  ARCHITECTURE.md  CAPABILITY.md  CLAIMS-VS-REALITY.md  COMPLIANCE.md  CONCEPTS.md  GLOSSARY.md  INTEGRITY.md  MODELLED-RATIONALE.md  POSITIONING.md  PROVENANCE.md  PYTHON_API.md  QUANTUM-MODELS.md  QUANTUM.md  REAL_TLE_GUIDE.md  REFERENCE-GRADE-OD.md  REPRODUCIBILITY.md  RESILIENCE-CROSSWALK.md  SCENARIOS.md  SCHEMA.md  SGP4-VALIDATION.md  STANDARDS.md  VALIDATION.md  VERIFICATION-MATRIX.md  WHEEL_TAGS.md  integrations.md
examples/: gen_ccsds_oem_interop_fixtures.rs  gen_p2_independent_dop_geometry.rs  gen_p2_lunar_service_fixtures.rs  gen_p5_ccsds_cov_fixture.rs  ingest_realdata.rs  jammertest_probe.rs  optimism_study.rs  p1_datum_identifiability.rs  p2_cross_provider_interop.rs  real_data_probe.rs  resilience_report.rs  satgrid_probe.rs  texbat_probe.rs  tpl_jammertest.rs  yunnan_probe.rs
mcp/kshana-mcp/: Cargo.toml  Dockerfile  README.md  server.json
mcp/kshana-mcp/src/: lib.rs  main.rs  server.rs
mcp/kshana-mcp/tests/: round_trip.rs
notebooks/: quantum-vs-classical-gdop.ipynb  quantum-vs-classical-gdop.md
paper/: figure-deadreckoning.md  kshana-technical-report.md  paper.bib  paper.md
paper-artifacts/: optimism-study.json  resilience-study.json
scenarios/: araim-gps-galileo.toml  attitude-budget.toml  cislunar-observability.toml  clock-ensemble.toml  clock-holdover-labsr.toml  clock-holdover.toml  combined-altpnt.toml  conflict-resilience.toml  eo-coverage.toml  ephemeris.toml  fusion-pnt.toml  gnss-ins.toml  gnss-sim-raim.toml  gps-denied-gravity-nav.toml  gravity-map-nav.toml  hybrid-optical-rf.toml  hybrid-pnt.toml  hybrid-ukf.toml  impairment-eval.toml  imu-deadreckoning.toml  integrity-raim.toml  jamming-demo.toml  launch-window.toml  link-budget.toml  lunanet-araim.toml  lunar-attack-surface.toml  lunar-differential-pnt.toml  lunar-frame-realisation.toml  lunar-interop-export.toml  lunar-joint-od-clock.toml  lunar-time-budget.toml  lunar-time-offset.toml  lunar-vlbi.toml  mars-pnt-lmo.toml  mars-pnt-surface.toml  mars-pnt-transfer.toml  moonlight-service-volume.toml  oem-interop.toml  orbit-gnss-challenged.toml  orbit-molniya.toml  (+25 more)
scripts/: changelog-extract.sh  check-doc-coverage.sh  check-no-attribution.sh  check-paper.sh  check-reproducible.sh  check-toolchain.sh  check-version-sync.sh  fetch_cs5071a.sh  fetch_phasedat.sh  fetch_tles.sh  gen-sbom.sh  gen_datum_identifiability_ref.py  gen_de440_moon_pa.py  gen_interop_ref.py
src/: acquisition.rs  allan.rs  antenna.rs  api.rs  attack_surface.rs  attitude_budget.rs  attitude_dynamics.rs  batch_ls.rs  body.rs  bplane.rs  ccsds_tdm.rs  chart.rs  cio.rs  cio_s06_data.rs  cislunar_observability.rs  cislunar_srif.rs  clock_specs.rs  clock_state.rs  conflict_resilience.rs  conflict_threat_params.rs  cr3bp.rs  cross_raim.rs  cross_sensor_integrity.rs  crossover.rs  crpa.rs  cw_dynamics.rs  deepspace_od.rs  detection.rs  dro.rs  egm2008_data.rs  ensemble.rs  eo_payload.rs  eop.rs  ephem.rs  ephem_provider.rs  ephemeris.rs  estimator.rs  eval_stats.rs  fes2004_data.rs  filter_health.rs  (+129 more)
submissions/: README.md  abstracts.md  awesome-gnss-PR.md  awesome-mcp-servers.md  discussions-setup.md  essr-registration.md  jetbrains-marketplace.md  mcp-registry.md  nasa-listing.md  navipedia-edit.md
tests/: acquisition_reference.rs  agency_galileo.rs  agency_lro.rs  agency_swarm.rs  ai_ml_rf_impairment_detection_evaluation_reference.rs  allan_nist_sp1065_1000point.rs  allan_reference.rs  alternative_complementary_pnt_reference.rs  araim_dual_real_data.rs  attitude_dynamics_reference.rs  attitude_gg_torque_reference.rs  ballistic_re_entry_corridor_reference.rs  batch_sequential_orbit_determination_reference.rs  cai_cited_error_model_sheet_reference.rs  calibration.rs  ccsds_oem_covariance_reference.rs  ccsds_oem_interop_reference.rs  ccsds_reference.rs  ccsds_space_packet_reference.rs  cislunar_gdop_singular_reference.rs  cislunar_mission_analysis_reference.rs  cislunar_srif_batch_ls_reference.rs  citation_metadata_doc_sync.rs  classical_strapdown_ins_reference.rs  clock_state_reference.rs  conflict_resilience_surface.rs  conflict_threat_params_provenance.rs  conformance.rs  cr3bp_variational_stm_reference.rs  cross_platform_golden.rs  crpa_reference.rs  cs5071a_reference.rs  cw_dynamics_reference.rs  deep_space_mars_radiometric_reference.rs  determinism.rs  dominance_demonstrators.rs  dop_reference.rs  eo_payload_coverage_reference.rs  ephem_provider.rs  eval_metrics_reference.rs  (+125 more)
tools/: egm2008_to70.gfc  fetch_srtm_tile.py  gen_egm2008.py  gen_fes2004.py  gen_igrf.py  gen_nut00a.py  gen_s06.py  gen_terrain_fixture.py  gen_validation_figures.py  (+1 more)
web/: CNAME  (+33 more)
xval/anise-frames/: Cargo.toml  README.md
xval/anise-frames/fixtures/: finals2000A_excerpt.txt
xval/anise-frames/src/: anise_bridge.rs  compare.rs  eop.rs  kernel.rs  kshana_chain.rs  lib.rs  main.rs  timeconv.rs  xval.rs
xval/anise-frames/tests/: cross_validation.rs  era_time_xval.rs
xval/anise-lunar-od/: Cargo.toml  README.md
xval/anise-lunar-od/src/: anise_env.rs  fit.rs  kernel.rs  lib.rs  main.rs  report.rs  truth.rs
xval/anise-lunar-od/tests/: lunar_od_xval.rs
xval/anise-mars-od/: Cargo.toml  README.md
xval/anise-mars-od/src/: anise_env.rs  kernel.rs  lib.rs  lighttime.rs  main.rs  report.rs  xval.rs
xval/anise-mars-od/tests/: mars_od_xval.rs
xval/anise-service-geometry/: Cargo.toml
xval/anise-service-geometry/src/: main.rs
(+372 files in other folders)
