[package]
name = "kshana"
version = "0.1.0"
edition = "2021"
description = "Open hybrid quantum/classical PNT performance simulator"
license = "Apache-2.0"
authors = ["Chakshu Baweja <contact@ashforde.org>"]
repository = "https://github.com/AshfordeOU/kshana"
homepage = "https://github.com/AshfordeOU/kshana"
documentation = "https://docs.rs/kshana"
readme = "README.md"
keywords = ["pnt", "navigation", "quantum", "gnss", "simulation"]
categories = ["science", "simulation"]
rust-version = "1.75"

[lib]
name = "kshana"
path = "src/lib.rs"

[[bin]]
name = "kshana"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.10"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
