[package]
name = "kshana"
version = "0.14.1"
edition = "2021"
description = "Open, reproducible PNT-resilience simulator with quantum-sensor performance models"
license = "Apache-2.0"
authors = ["Chakshu Baweja <contact@ashforde.org>"]
repository = "https://github.com/AshfordeOU/kshana"
homepage = "https://kshana.dev"
documentation = "https://docs.rs/kshana"
readme = "README.md"
keywords = ["pnt", "navigation", "quantum", "gnss", "simulation"]
categories = ["science", "simulation"]
rust-version = "1.75"
# Keep the published crate lean: the browser playground, CI config, and the
# fixture-backed validation tests aren't part of the library distribution. (Those
# tests read the fixtures via include_str!, so each must be excluded alongside the
# fixtures or a packaging verification build would fail to find them. The SGP4
# head-to-head also pulls the `sgp4` dev-dependency, which library consumers never
# need.)
exclude = [
    "/web",
    "/.github",
    "/tests/fixtures",
    "/tests/igs_real_data.rs",
    "/tests/sgp4_crate_comparison.rs",
    "/tests/terrain_nav_validation.rs",
    # The ANISE frame cross-validation is a standalone, workspace-excluded crate with
    # its own Cargo.lock (it depends on the MPL-2.0 / edition-2024 `anise` + `hifitime`,
    # which must never enter the published crate's dependency graph). See xval/.
    "/xval",
    # The MCP server is likewise a standalone, workspace-excluded crate: the `rmcp` SDK
    # is edition-2024, so it cannot sit in the MSRV-1.75 build graph. See mcp/.
    "/mcp",
    # The JetBrains IDE plugin is a standalone Kotlin/Gradle project, not part of the
    # Rust crate at all. See ide/jetbrains/.
    "/ide",
]

[lib]
name = "kshana"
path = "src/lib.rs"
# rlib for the CLI and tests; cdylib for the Python / WebAssembly extension modules.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "kshana"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"

# Optional bindings. Off by default: the core library, CLI, tests, and the
# dependency-audit gate never compile or scan these unless the feature is enabled.
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# On wasm32 the (transitive) getrandom must use the browser/JS entropy source.
# Target-gated, so native builds and the dependency-audit gate are unaffected.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
# Python extension module, built with maturin (`maturin build --features python`).
python = ["dep:pyo3"]
# WebAssembly module, built with wasm-pack (`wasm-pack build -- --features wasm`).
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
# Independent SGP4 implementation for the head-to-head accuracy cross-check
# (tests/sgp4_crate_comparison.rs). Test-only: never compiled into the library,
# CLI, or the published bindings; the package excludes the test that uses it.
sgp4 = "2.4"
