[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "kshana"
description = "Open hybrid quantum/classical PNT performance simulator"
requires-python = ">=3.9"
# Dual-licensed: AGPL-3.0-only for open use, or a commercial licence from
# Ashforde OÜ (contact@ashforde.org). See LICENSE and LICENSING.md.
license = "AGPL-3.0-only"
authors = [{ name = "Chakshu Baweja", email = "contact@ashforde.org" }]
readme = "README.md"
keywords = ["pnt", "navigation", "quantum", "gnss", "simulation"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
]
dynamic = ["version"]

# numpy is a TEST-ONLY dependency. The extension has zero runtime NumPy need, so
# it is deliberately NOT in [project] dependencies (no false dependency claim);
# it lives only here under the `test` extra and in the CI install step.
[project.optional-dependencies]
test = ["pytest", "numpy"]

[project.urls]
Homepage = "https://kshana.dev"
Repository = "https://github.com/AshfordeOU/kshana"
Documentation = "https://docs.rs/kshana"

[tool.maturin]
# Build the extension module from the `python` Cargo feature; abi3 wheels work
# across CPython >= 3.9. maturin sets the macOS `-undefined dynamic_lookup` link
# flag automatically.
features = ["python"]
# Ship the type stub + PEP 561 marker next to the extension so mypy/pyright and
# editors see the typed surface.
include = ["kshana.pyi", "py.typed"]
