# Standalone, workspace-EXCLUDED cross-validation crate — the DE-grade Mars/heliocentric check.
#
# Why a separate crate and not a `kshana` cargo feature (identical rationale to
# `xval/anise-lunar-od` and `xval/anise-frames`): this cross-check depends on `anise` (the
# pure-Rust NAIF/SPICE reimplementation) and `hifitime`, both licensed MPL-2.0 and built on
# edition 2024 (Rust >= 1.85). Pulling either into the main crate's dependency graph would (a) break
# the required `cargo deny` license gate (MPL-2.0 is outside the strict allow-list) and (b) break
# the MSRV job (cargo 1.75 cannot even parse an edition-2024 manifest in the resolved graph).
# Isolating this here keeps the published `kshana` crate lean and every default CI gate
# byte-for-byte untouched: this crate has its OWN Cargo.lock and is invisible to root `cargo`
# commands (the root package declares no `[workspace]` and lists `/xval` in its `exclude`).
[package]
name = "kshana-anise-mars-od"
version = "0.1.0"
edition = "2021"
description = "Independent DE-grade cross-validation of kshana's Sun-central (heliocentric) Mars propagation: seed kshana's two-body Sun-central propagator from a DE440 Mars-barycenter state and measure the honest residual against the DE440 Mars ephemeris (via ANISE/SPICE) over a short arc — the planetary analogue of xval/anise-lunar-od."
license = "AGPL-3.0-only"
publish = false

[[bin]]
name = "mars-od-xval"
path = "src/main.rs"

# D0.7 — the deep-space light-time cross-check (kshana retarded light_time_solution vs ANISE
# converged-Newtonian aberration light time over the same DE440 geometry). Writes the JSON/MD report
# here and the committed fixture into the main crate's tests/fixtures/ tree.
[[bin]]
name = "lighttime-xval"
path = "src/bin/lighttime_main.rs"

[dependencies]
# The kshana library supplies the Sun-central force model + propagator (propagator::propagate with
# ForceModel::two_body().with_body(Body::sun())) and the body constants (body::Body::sun μ) — all
# reused verbatim. Only the truth ephemeris is swapped for DE-grade here.
kshana = { path = "../.." }
# ANISE: pure-Rust NAIF/SPICE. `default-features = false` drops the HTTP downloader / Dhall
# metaload stack (we fetch kernels ourselves via curl), so the only crates this pulls that fall
# outside kshana's strict license allow-list are `anise` + `hifitime`, both MPL-2.0 — confined
# entirely to this crate's Cargo.lock.
anise = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For the citable kernel checksums in the report (permissive licenses; this crate only).
sha2 = "0.10"
hex = "0.4"
