# Standalone, workspace-EXCLUDED cross-validation crate — the independent-Kepler check
# for kshana's lunar navigation service-volume geometry.
#
# Why a separate crate and not a `kshana` cargo feature (identical rationale to
# `xval/anise-frames` / `xval/anise-lunar-od`): this cross-check depends on `anise` (the
# pure-Rust NAIF/SPICE reimplementation) and `hifitime`, both licensed MPL-2.0 and built
# on edition 2024 (Rust >= 1.85). Pulling either into the main crate's dependency graph
# would (a) break the required `cargo deny` license gate (MPL-2.0 is outside the strict
# allow-list) and (b) break the MSRV job. Isolating this here keeps the published `kshana`
# crate lean and every default CI gate byte-for-byte untouched: this crate has its OWN
# Cargo.lock and is invisible to root `cargo` commands (the root package declares no
# `[workspace]` and lists `/xval` in its `exclude`).
[package]
name = "kshana-anise-service-geometry"
version = "0.1.0"
edition = "2021"
description = "Independent cross-validation of kshana's lunar navigation service-volume geometry: propagate the illustrative LCNS-class constellation with ANISE 0.10's Keplerian two-body orbit (an independent Kepler/equinoctial solver, GMAT-derived element conversion), compare the per-satellite MCI position vector at every epoch and the derived elevation + visible-satellite SET on the selenographic grid against kshana's LunarSat::position_mci + visibility."
license = "AGPL-3.0-only"
publish = false

[[bin]]
name = "service-geometry-xval"
path = "src/main.rs"

[dependencies]
# The kshana library supplies the model under test: lunar_service::LunarSat::position_mci
# (the Newton-Raphson Kepler propagator), the lunar::mci_to_mcmf mean-rotation reduction,
# lunar::selenographic_to_mcmf, and lunar_service::visible_sat_positions — all reused
# verbatim. Nothing of kshana's geometry is reimplemented here.
kshana = { path = "../.." }
# ANISE: pure-Rust NAIF/SPICE. We use ONLY its astrodynamics core — anise::astro::Orbit
# (CartesianState) Keplerian constructors + the two-body `at_epoch` propagation — as the
# independent oracle. `default-features = false` drops the HTTP downloader / Dhall stack;
# no kernels are needed (this check is pure two-body Kepler, no ephemeris). `anise` +
# `hifitime` are MPL-2.0, confined entirely to this crate's Cargo.lock.
anise = { version = "0.10", default-features = false }
hifitime = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
